adding extra two fields

--- a/GROUPPROJRCT/Views/Web.config
+++ b/GROUPPROJRCT/Views/Web.config
@@ -25,6 +25,9 @@
   <appSettings>
     <add key="webpages:Enabled" value="false" />
   </appSettings>
+	<connectionStrings>
+		<add name="jyothi" connectionString="user id=sa; password=bhanu; database=magneq;data source=LAPTOP-D7DQ9T4J\SQLEXPRESS"/>
+	</connectionStrings>
 
   <system.webServer>
     <handlers>
